argocd/namespaces/argocd/reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: argocd
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "-600"
spec:
  from:
  - group: gateway.networking.k8s.io
    kind: Gateway
    namespace: network
  to:
  - group: ""
    kind: Secret
