argocd/namespaces/argocd/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd
  namespace: argocd
  annotations:
    argocd.argoproj.io/sync-wave: "30"
spec:
  parentRefs:
  - name: public
    namespace: network
    sectionName: argocd
  hostnames: # todo: adjust to your domain
  - "argocd.yourdomain.example"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argo-cd-argocd-server
      port: 80
